@startuml

class SalaryParser {
    String inputPath
    Employees employees

    readEmployees()
    parseCSV()
}

class Employees {
    ArrayList<Employee> employeeList

    setEmployeeList()
    getEmployeeList()
    formatEmployeeList()
}

class Employee {
    String firstName
    String lastName
    int salary

    setFirstName()
    getFirstName()
    setLastName()
    getLastName()
    setSalary()
    getSalary()
}

SalaryParser o-- Employees
Employees o-- Employee

@enduml